1. 优化 SPI 内部的变量名称, 彻底支持 类+方式名 -> 实现类实例的映射 2. 服务发现和服务注册改用抽象类，以适应SPI只能空参创建的问题，注册中心地址从可以从外部注入 3. 去除自动配置类内部冗余的bean方法代码